# vsomeip

./: CMakeLists.txt  README.md  toolchain-android-4.4.cmake
config/: vsomeip-local-client.json  vsomeip-udp-client.json  vsomeip-udp-lidar.json  vsomeip-udp-service-android.json
daemon/: CMakeLists.txt
examples/: CMakeLists.txt  lidar-sample.cpp  request-sample.cpp  response-sample.cpp  sample-ids.hpp
implementation/configuration/include/: internal.hpp.in
implementation/routing/src/: routing_manager_impl.cpp
implementation/runtime/src/: application_impl.cpp
implementation/utility/src/: utility.cpp
